@@ -1,3 +1,4 @@
 *.war
 RPMS
+SOURCES/ipt.7
 SRPMS
