@@ -1,9 +1,13 @@
 all: rpm
 
 clean:
-	rm -rf RPMS SRPMS
+	rm -rf RPMS SRPMS SOURCES/ipt.7
 
-rpm:
+# Build here, as CentOS 8 no longer includes "ronn".
+SOURCES/ipt.7:
+	ronn --roff --organization Global\ Biodiversity\ Information\ Facility SOURCES/ipt.7.ronn > SOURCES/ipt.7
+
+rpm: SOURCES/ipt.7
 	bash docker-build.sh
 
 deploy-testing:
