@@ -1,4 +1,7 @@
 # Example Apache HTTPD configuration files for the IPT.
+#
+# See https://ipt.gbif.org/manual/en/ipt/2.5/installation for further
+# details.
 
 <VirtualHost *:80>
 	ServerName ipt.example.org
